[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/gameplay/Combat.gd" id="1_vk5j4"]

[node name="Combat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_vk5j4")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="EnemyPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 180.0

[node name="EnemySection" type="VBoxContainer" parent="EnemyPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="EnemyLabel" type="Label" parent="EnemyPanel/EnemySection"]
layout_mode = 2
text = "üî• INIMIGO"
horizontal_alignment = 1

[node name="EnemyHP" type="Label" parent="EnemyPanel/EnemySection"]
layout_mode = 2
text = "‚ù§Ô∏è HP: 30"
horizontal_alignment = 1

[node name="EnemyHPBar" type="ProgressBar" parent="EnemyPanel/EnemySection"]
layout_mode = 2
value = 100.0
show_percentage = false

[node name="EnemyShield" type="Label" parent="EnemyPanel/EnemySection"]
layout_mode = 2
text = "üõ°Ô∏è Escudo: 0"
horizontal_alignment = 1

[node name="PlayerPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -200.0
offset_right = 280.0
offset_bottom = -20.0

[node name="PlayerSection" type="VBoxContainer" parent="PlayerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="PlayerLabel" type="Label" parent="PlayerPanel/PlayerSection"]
layout_mode = 2
text = "‚öîÔ∏è JOGADOR"

[node name="PlayerHP" type="Label" parent="PlayerPanel/PlayerSection"]
layout_mode = 2
text = "‚ù§Ô∏è HP: 100"

[node name="PlayerHPBar" type="ProgressBar" parent="PlayerPanel/PlayerSection"]
layout_mode = 2
value = 100.0
show_percentage = false

[node name="PlayerShield" type="Label" parent="PlayerPanel/PlayerSection"]
layout_mode = 2
text = "üõ°Ô∏è Escudo: 0"

[node name="EnergyLabel" type="Label" parent="PlayerPanel/PlayerSection"]
layout_mode = 2
text = "‚ö° Energia: 3/3"

[node name="EnergyBar" type="ProgressBar" parent="PlayerPanel/PlayerSection"]
layout_mode = 2
value = 100.0
show_percentage = false

[node name="CardsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -220.0
offset_right = 300.0
offset_bottom = -20.0

[node name="CardsSection" type="VBoxContainer" parent="CardsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="CardsLabel" type="Label" parent="CardsPanel/CardsSection"]
layout_mode = 2
text = "üÉè MINHA M√ÉO"
horizontal_alignment = 1

[node name="CardsContainer" type="HBoxContainer" parent="CardsPanel/CardsSection"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="GameInfoPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = 80.0

[node name="GameInfo" type="VBoxContainer" parent="GameInfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="BattleTitle" type="Label" parent="GameInfoPanel/GameInfo"]
layout_mode = 2
text = "‚öîÔ∏è BATALHA ‚öîÔ∏è"
horizontal_alignment = 1

[node name="TurnLabel" type="Label" parent="GameInfoPanel/GameInfo"]
layout_mode = 2
text = "‚è∞ Turno: 1"
horizontal_alignment = 1

[node name="EnemyNumberLabel" type="Label" parent="GameInfoPanel/GameInfo"]
layout_mode = 2
text = "üëπ Inimigo: #1"
horizontal_alignment = 1

[node name="StreakLabel" type="Label" parent="GameInfoPanel/GameInfo"]
layout_mode = 2
text = "üî• Sequ√™ncia: 0"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 51.0
text = "VOLTAR"